brat/test/golden/binding/cons.brat.golden
Error in badUncons (test/golden/binding/cons.brat)@FC {start = Pos {line = 7, col = 10}, end = Pos {line = 7, col = 31}}:
badUncons(cons(stuff)) = stuff
         ^^^^^^^^^^^^^^^^^^^^^

  Internal error: Expected empty unders after abstract, got:
  (tail :: List(Int))

